2004-02-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/rel_hu.py: Typos.
	* src/po/ru.po: Typo.
	* doc/gramps-manual/C/usage.xml: Typo.
	* doc/gramps-manual/ru/usage.xml: Update.

2004-01-31  Egyeki Gergely  <egeri@elte.hu>
	* src/plugins/rel_hu.py: Update

2004-01-31  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/faq.xml: Update.
	* doc/gramps-manual/fr/gramps-manual.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.
	* doc/gramps-manual/fr/figures/*.png: Update figures.

2004-01-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SourceView.py: handle column sorting properly
	* src/PlaceView.py: handle column sorting properly
	* src/gramps_main.py: better error messages on database write failure
	* src/WriteXML.py: better error messages on database write failure
	* src/GrampsXML.py: better error messages on database write failure

2004-01-31  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Ancestors.py: Typo.
	* src/plugins/IndivComplete.py: Typo.
	* src/Report.py: Mark translatable string.
	* src/Witness.py: Mark translatable string.
	* src/plugins/FamilyGroup.py: Mark translatable string.
	* src/plugins/AncestorChart2.py: Change the tile when changing
	the center person.
	* src/plugins/SimpleBookTitle.py: Correct window title. 
	* doc/gramps-manual/C/mainwin.xml: Correction.
	* src/po/ru.po: Typo.
	* doc/gramps-manual/ru/usage.xml: Update.

2004-01-31  Egyeki Gergely  <egeri@elte.hu>
	* src/po/hu.po: Updating translation for 1.0-RC

2004-01-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleView.py (PeopleView.add_to_person_list): don't attempt to sort the
	model unless it has be assigned.
	* src/TransTable.py: make sure returned valued is in unicode format
	* src/plugins/Ancestors.py: fix InverseNameTypesMap problem
	* src/plugins/IndivComplete.py: fix InverseNameTypesMap problem

2004-01-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/AncestorChart2.py (write_book_item): 